--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
 version: '3'
 services:
-  app:
+  react-app:
+    stdin_open: true
+    tty: true
     build: .
-    commands: npm start
     ports:
       - "3000:3000"
     volumes:
-      - .:/usr/app
-    working_dir: /usr/app
+      - ./src:/app/src
+    environment:
+      - REACT_APP_NAME=geradorPlaceholder
+      - WATCHPACK_POLLING=true
